# JPPersonalExpenditure

./: README.md  main.py  pyproject.toml  s-year-a.csv
