[tool.poetry]
name = "personalexpenditurestatic"
version = "0.1.0"
description = ""
authors = ["TomohiroHiratsuka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
